<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="@color/white">


    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/black_ops_one"
        android:layout_centerHorizontal="true"
        android:text="@string/logo"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:textSize="48sp" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:fontFamily="@font/aldrich"
        android:textSize="28sp"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/mail"
        android:textSize="24sp"
        android:hint="@string/mail"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_below="@id/slogan"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/blanks_background"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black_53"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/password"
        android:textSize="24sp"
        android:hint="@string/password"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_below="@id/mail"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/blanks_background"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black_53"
        android:textColor="@color/black"
        android:inputType="textPassword"/>


        <TextView
            android:text="@string/login"
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:background="@drawable/background_black"
            android:fontFamily="@font/aldrich"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textSize="22sp"
            android:layout_marginTop="40dp"
            android:elevation="10dp"
            android:onClick="openMainPage"/>



    <TextView
        android:text="@string/signup"
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:background="@drawable/blanks_background"
        android:fontFamily="@font/aldrich"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:textSize="22sp"
        android:layout_marginTop="40dp"
        android:elevation="10dp"
        android:textColor="@color/black"
        android:onClick="signUp"/>


    <TextView
        android:id="@+id/enter_without_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_without_account"
        android:textColor="#854545"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textSize="17sp"
        android:fontFamily="@font/aldrich"
        android:layout_centerHorizontal="true"
        android:onClick="openMainPage"/>





</RelativeLayout>