<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    android:background="@color/white">


    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/logo"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:textColor="@color/black"
        android:id="@+id/adminPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AdminPage"
        android:fontFamily="@font/aldrich"
        android:textSize="36sp"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"/>




    <TextView
        android:onClick="openAllItemsList"
        android:layout_below="@id/adminPage"
        android:id="@+id/items"
        android:padding="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/Items"
        android:textSize="38sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blanks_background"/>

    <TextView
        android:onClick="openAllUsersList"
        android:layout_below="@id/items"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/Users"
        android:textSize="38sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blanks_background"/>



</RelativeLayout>